--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -1,6 +1,15 @@
+update_check_interval 24
 #hide_window_decorations titlebar-only
 tab_bar_align center
 close_on_child_death yes
 macos_quit_when_last_window_closed yes
 background #1a1b26
 font_size 15.0
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Hack Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
